# PTT

./: README.md  build.sh
PTT/: CAction.cpp  CAction.h  CDependency.cpp  CDependency.h  CDomain.cpp  CDomain.h  CLearner.cpp  CLearner.h  CMakeLists.txt  CParameter.cpp  CParameter.h  CPlan.cpp  CPlan.h  CPredicate.cpp  CPredicate.h  CProblem.cpp  CProblem.h  CTypes.cpp  CTypes.h  PTT.cpp  PTT.kdev4  common.cpp  common.h  lex.yy.cc  lex.yy.cpp  main.cpp  pddlconvertor.l  pddlconvertor.tab.cpp  pddlconvertor.tab.hpp  pddlconvertor.ypp
PTT_examples/: depots_both.ptt  depots_inner.ptt  depots_inner_macros.ptt  depots_ker_macros.ptt  depots_mum.ptt  depots_outer.ptt  gripper_mum.ptt  gripper_outer.ptt
PTT_examples/depots/: domain.pddl~
PTT_examples/depots/learn/: dep-10-221115.pddl  dep-10-221115.pddl.soln  dep-11-221115.pddl  dep-11-221115.pddl.soln  dep-11-3322210.pddl  dep-11-3322210.pddl.soln  pfile1.pddl.soln~  pfile3.pddl  pfile3.pddl.soln  pfile4.pddl  pfile4.pddl.soln  pfile5.pddl  pfile5.pddl.soln
PTT_examples/depots/testing/: pfile02-009.pddl.ref
PTT_examples/gripper/learn/: pfile-2510-2.pddl  pfile-2510-2.pddl.soln  pfile-2510-3.pddl  pfile-2510-3.pddl.soln  pfile-2515-2.pddl  pfile-2515-2.pddl.soln  pfile-2515-3.pddl  pfile-2515-3.pddl.soln  pfile-2710-3.pddl  pfile-2710-3.pddl.soln  pfile-2710-4.pddl  pfile-2710-4.pddl.soln
